--- a/index.html
+++ b/index.html
@@ -3,9 +3,58 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pertanian</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+
+    <!-- Navbar -->
+    <nav>
+        <div class="logo">
+            <a href="index.php"><img src="aset/img/logo.webp" alt="logo"></a>
+        </div>
+
+        <ul>
+            <li>Home</li>
+            <li>unit kerja</li>
+            <li>informasi</li>
+            <li>Kontak</li>
+        </ul>
+    </nav>
+
+    <div class="container1">
+        <img src="aset/img/bg 1.jpg" alt="">
+    </div>
+
+    <div class="container2">
+        <div class="title">
+            <span>judul</span>
+            <ul>
+                <li>
+                    <img src="" alt="icon">
+                    <div class="deskripsi">
+                        <span>donasi</span>
+                        <span>123dana</span>
+                    </div>
+                </li>
+                <li>
+                    <img src="" alt="icon">
+                    <div class="deskripsi">
+                        <span>donasi</span>
+                        <span>123dana</span>
+                    </div>
+                </li>
+
+            </ul>
+        </div>
+
+        <div class="card">
+            <ul>
+                <li>1</li>
+                <li>2</li>
+                <li>3</li>
+            </ul>
+        </div>
+    </div>
 </body>
 </html>
