--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Navbar -->
     <nav>
         <div class="logo">
-            <a href="index.php"><img src="aset/img/logo.webp" alt="logo"></a>
+            <a href="index.html"><img src="aset/img/logo.webp" alt="logo"></a>
         </div>
 
         <ul>
@@ -27,33 +27,64 @@
     </div>
 
     <div class="container2">
-        <div class="title">
-            <span>judul</span>
-            <ul>
-                <li>
-                    <img src="" alt="icon">
-                    <div class="deskripsi">
-                        <span>donasi</span>
-                        <span>123dana</span>
-                    </div>
-                </li>
-                <li>
-                    <img src="" alt="icon">
-                    <div class="deskripsi">
-                        <span>donasi</span>
-                        <span>123dana</span>
-                    </div>
-                </li>
-
-            </ul>
+        <div class="logo">
+            <div class="logo-item">
+                <img src="aset/img/vektor 1.png" alt="Logo 1">
+                <p>Loremp</p>
+            </div>
+            <div class="logo-item">
+                <img src="aset/img/vektor 2.png" alt="Logo 2">
+                <p>Loremp</p>
+            </div>
+            <div class="logo-item">
+                <img src="aset/img/vektor 3.png" alt="Logo 3">
+                <p>Loremp</p>
+            </div>
         </div>
 
-        <div class="card">
-            <ul>
-                <li>1</li>
-                <li>2</li>
-                <li>3</li>
-            </ul>
+        <div class="cards">
+            <div class="card">
+                <img src="aset/img/conten 1.png" alt="Card 1">
+                <div class="card-content">
+                    <h3>Pertanian Memasuki Langkah Nyata Menuju Lumbung Pangan Dunia</h3>
+                    <p>22 Desember 2023</p>
+                    <button>Selengkapnya</button>
+                </div>
+            </div>
+            <div class="card">
+                <img src="aset/img/conten 2.jpg" alt="Card 2">
+                <div class="card-content">
+                    <h3>Upaya Hadapi Serangan Hama Wereng Dilahan Pertanian Terik</h3>
+                    <p>12 Juni 2024</p>
+                    <button>Selengkapnya</button>
+                </div>
+            </div>
+            <div class="card">
+                <img src="aset/img/conten 3.jpg" alt="Card 3">
+                <div class="card-content">
+                    <h3>Anggaran Ketahanan Pangan 2025: Harus Tingkatkan Produktivitas Pertanian</h3>
+                    <p>29 Agustus 2024</p>
+                    <button>Selengkapnya</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container3">
+        <div class="content-container">
+            <div class="img"></div>
+            <p>
+                Menteri Pertanian Andi Amran Sulaiman, pada kunjungan di Merauke, Papua Selatan, menegaskan tekad pemerintah untuk menjadikan Merauke sebagai lumbung pangan global. Dia menyatakan optimisme bahwa Merauke akan menjadi sumber utama beras nasional dalam dua tahun ke depan. Evaluasi dilakukan terhadap progres optimalisasi lahan rawa seluas 40 ribu hektar, dengan lebih dari separuh sudah selesai dibangun. Pembangunan jalan sepanjang 135,5 km juga tengah berlangsung untuk mendukung program cetak sawah 1 juta hektar. Menteri Amran memantau proyek ini secara langsung dan berkomitmen untuk terus mengawasinya. Semangat membangun Merauke sebagai lumbung pangan dunia menjadi fokus dalam upaya modernisasi pertanian di daerah tersebut.
+            </p>
+        </div>
+    </div>
+
+    <div class="container4">
+        <div class="content-container">
+            <p>
+                Menteri Pertanian Andi Amran Sulaiman, pada kunjungan di Merauke, Papua Selatan, menegaskan tekad pemerintah untuk menjadikan Merauke sebagai lumbung pangan global. Dia menyatakan optimisme bahwa Merauke akan menjadi sumber utama beras nasional dalam dua tahun ke depan. Evaluasi dilakukan terhadap progres optimalisasi lahan rawa seluas 40 ribu hektar, dengan lebih dari separuh sudah selesai dibangun. Pembangunan jalan sepanjang 135,5 km juga tengah berlangsung untuk mendukung program cetak sawah 1 juta hektar. Menteri Amran memantau proyek ini secara langsung dan berkomitmen untuk terus mengawasinya. Semangat membangun Merauke sebagai lumbung pangan dunia menjadi fokus dalam upaya modernisasi pertanian di daerah tersebut.
+            </p>
+            <div class="img"></div>
         </div>
     </div>
 </body>
