--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pertanian</title>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
 </head>
 <body>
 
@@ -13,13 +14,21 @@
         <div class="logo">
             <a href="index.html"><img src="aset/img/logo.webp" alt="logo"></a>
         </div>
+        <div class="nav-normal">
+            <ul>
+                <li>Home</li>
+                <li>unit kerja</li>
+                <li>informasi</li>
+                <li>Kontak</li>
+            </ul>
+        </div>
+        
 
-        <ul>
-            <li>Home</li>
-            <li>unit kerja</li>
-            <li>informasi</li>
-            <li>Kontak</li>
-        </ul>
+        <div class="nav-dropdown">
+            <ul>
+                <li>Menu</li>
+            </ul>
+        </div>
     </nav>
 
     <div class="container1">
@@ -29,16 +38,16 @@
     <div class="container2">
         <div class="logo">
             <div class="logo-item">
-                <img src="aset/img/vektor 1.png" alt="Logo 1">
-                <p>Loremp</p>
+                <img src="aset/img/BUMN.png" alt="Logo 1">
+                <p>Badan Usaha Milik Negara</p>
             </div>
             <div class="logo-item">
-                <img src="aset/img/vektor 2.png" alt="Logo 2">
-                <p>Loremp</p>
+                <img src="aset/img/Pertanian.webp" alt="Logo 2">
+                <p>Kementerian Pertanian Republik Indonesia</p>
             </div>
             <div class="logo-item">
-                <img src="aset/img/vektor 3.png" alt="Logo 3">
-                <p>Loremp</p>
+                <img src="aset/img/BPN.png" alt="Logo 3">
+                <p>Badan Pangan Nasional</p>
             </div>
         </div>
 
@@ -82,10 +91,71 @@
     <div class="container4">
         <div class="content-container">
             <p>
-                Menteri Pertanian Andi Amran Sulaiman, pada kunjungan di Merauke, Papua Selatan, menegaskan tekad pemerintah untuk menjadikan Merauke sebagai lumbung pangan global. Dia menyatakan optimisme bahwa Merauke akan menjadi sumber utama beras nasional dalam dua tahun ke depan. Evaluasi dilakukan terhadap progres optimalisasi lahan rawa seluas 40 ribu hektar, dengan lebih dari separuh sudah selesai dibangun. Pembangunan jalan sepanjang 135,5 km juga tengah berlangsung untuk mendukung program cetak sawah 1 juta hektar. Menteri Amran memantau proyek ini secara langsung dan berkomitmen untuk terus mengawasinya. Semangat membangun Merauke sebagai lumbung pangan dunia menjadi fokus dalam upaya modernisasi pertanian di daerah tersebut.
+                Serangan hama wereng terhadap tanaman padi di Tasikmalaya telah menimbulkan kekhawatiran, terutama bagi para petani. Koordinator penyuluh pertanian BPP Kecamatan Cibeureum, Asep Ridwan, menyampaikan bahwa serangan hama wereng jenis batang coklat (WBC) kini sedang merebak dan mengejutkan petani. Hal ini diduga disebabkan oleh perubahan iklim, penggunaan benih kurang berkualitas, dan gangguan ekosistem yang mengurangi populasi predator wereng. Untuk mengatasi masalah ini, saat ini dilakukan penyemprotan insektisida baik oleh pemerintah maupun petani sendiri. Para penyuluh pertanian juga memberikan bantuan insektisida kepada petani untuk membantu mengatasi serangan hama wereng ini. Meskipun jumlah lahan yang terdampak mencapai 80 hektar, petugas terus melakukan upaya pengendalian dan memberikan penyuluhan untuk mencegah serangan hama tersebut terjadi di musim panen selanjutnya.
             </p>
             <div class="img"></div>
         </div>
     </div>
+
+    <div class="container3 container5">
+        <div class="content-container">
+            <div class="img"></div>
+            <p>
+                Pengamat pertanian dan Kepala Dinas Pangan Sumatera Barat, Syaiful Bahri, menyoroti pentingnya memaksimalkan anggaran ketahanan pangan Rp 124,4 triliun dalam RAPBN 2025 untuk meningkatkan produktivitas pertanian. Dikatakan bahwa prioritas utama harus diberikan pada ketahanan pangan, baik melalui impor maupun produksi dalam negeri. Syaiful menekankan perlunya pemerintah fokus pada peningkatan produktivitas pertanian, terutama dalam produksi padi, untuk menghindari defisit beras. Keseriusan pemerintah dalam mencapai ketahanan pangan dinilai dari penanganan berbagai permasalahan pertanian, seperti pupuk subsidi, kualitas bibit, dan infrastruktur pertanian.
+            </p>
+        </div>
+    </div>
+
+    <div class="title">
+        <h1>Apa saja masukan <span class="petani green">PETANI BERKAH?</span></h1>
+    </div>
+
+    <div class="horizontal-scroll">
+        <div class="container6">
+            <div class="item">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus voluptates voluptate totam eos, obcaecati nobis earum officia recusandae optio porro atque nam corporis iste reprehenderit rerum neque autem? Suscipit, sequi.</p>
+                <div class="profil">
+                    <img src="aset/img/profil1.jpg" alt="profil">
+                    <span>Nama</span>
+                </div>
+            </div>
+            <div class="item green">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus voluptates voluptate totam eos, obcaecati nobis earum officia recusandae optio porro atque nam corporis iste reprehenderit rerum neque autem? Suscipit, sequi.</p>
+                <div class="profil">
+                    <img src="aset/img/profil1.jpg" alt="profil">
+                    <span>Nama</span>
+                </div>
+            </div>
+            <div class="item">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus voluptates voluptate totam eos, obcaecati nobis earum officia recusandae optio porro atque nam corporis iste reprehenderit rerum neque autem? Suscipit, sequi.</p>
+                <div class="profil">
+                    <img src="aset/img/profil1.jpg" alt="profil">
+                    <span>Nama</span>
+                </div>
+            </div>
+            <div class="item green">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus voluptates voluptate totam eos, obcaecati nobis earum officia recusandae optio porro atque nam corporis iste reprehenderit rerum neque autem? Suscipit, sequi.</p>
+                <div class="profil">
+                    <img src="aset/img/profil1.jpg" alt="profil">
+                    <span>Nama</span>
+                </div>
+            </div>
+            <div class="item">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus voluptates voluptate totam eos, obcaecati nobis earum officia recusandae optio porro atque nam corporis iste reprehenderit rerum neque autem? Suscipit, sequi.</p>
+                <div class="profil">
+                    <img src="aset/img/profil1.jpg" alt="profil">
+                    <span>Nama</span>
+                </div>
+            </div>
+            <div class="item green">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus voluptates voluptate totam eos, obcaecati nobis earum officia recusandae optio porro atque nam corporis iste reprehenderit rerum neque autem? Suscipit, sequi.</p>
+                <div class="profil">
+                    <img src="aset/img/profil1.jpg" alt="profil">
+                    <span>Nama</span>
+                </div>
+            </div>
+        </div>
+    </div>
+    
 </body>
 </html>
