--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pertanian</title>
+    <meta name="description" content="Situs Tani Berkah adalah proyek dari kelompok MyDev yang menyediakan informasi dan panduan terbaru tentang teknik bercocok tanam, inovasi pertanian, dan produk-produk unggulan untuk petani modern.">
+    <title>MyDev Tani Berkah</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="aset/img/logo.webp">
     <script src="script.js"></script>
 </head>
 <body>
