--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="aset/img/conten 2.jpg" alt="Card 2">
+                <img src="aset/img/conten 3.jpg" alt="Card 2">
                 <div class="card-content">
                     <h3>Upaya Hadapi Serangan Hama Wereng Dilahan Pertanian Terik</h3>
                     <p>12 Juni 2024</p>
@@ -71,7 +71,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="aset/img/conten 3.jpg" alt="Card 3">
+                <img src="aset/img/conten 2.jpg" alt="Card 3">
                 <div class="card-content">
                     <h3>Anggaran Ketahanan Pangan 2025: Harus Tingkatkan Produktivitas Pertanian</h3>
                     <p>29 Agustus 2024</p>
@@ -115,49 +115,120 @@
     <div class="horizontal-scroll">
         <div class="container6">
             <div class="item">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus voluptates voluptate totam eos, obcaecati nobis earum officia recusandae optio porro atque nam corporis iste reprehenderit rerum neque autem? Suscipit, sequi.</p>
+                <p>Pertimbangkan untuk diversifikasi produk yang ditanam untuk membuka peluang pasar baru. Manfaatkan platform digital dan media sosial untuk mempromosikan dan menjual produk secara langsung kepada konsumen.</p>
                 <div class="profil">
-                    <img src="aset/img/profil1.jpg" alt="profil">
-                    <span>Nama</span>
+                    <img src="aset/img/user2.png" alt="profil">
+                    <span>Ahmad Kasim</span>
                 </div>
             </div>
             <div class="item green">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus voluptates voluptate totam eos, obcaecati nobis earum officia recusandae optio porro atque nam corporis iste reprehenderit rerum neque autem? Suscipit, sequi.</p>
+                <p>cobalah teknik rotasi tanaman untuk menjaga kesehatan tanah dan mengurangi risiko penyakit tanaman. Gunakan kompos organik untuk meningkatkan  kesuburan tanah dan struktur tanah. </p>
                 <div class="profil">
-                    <img src="aset/img/profil1.jpg" alt="profil">
-                    <span>Nama</span>
+                    <img src="aset/img/user6.png" alt="profil">
+                    <span>Hadi Hidayat</span>
                 </div>
             </div>
             <div class="item">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus voluptates voluptate totam eos, obcaecati nobis earum officia recusandae optio porro atque nam corporis iste reprehenderit rerum neque autem? Suscipit, sequi.</p>
+                <p>Pertimbangkan menggunakan teknologi seperti sensor tanah atau aplikasi mobile untuk memantau kesehatan tanaman dan kondisi tanah. Pastikan semua alat dan mesin pertanian dalam kondisi baik dan rutin diperiksa serta dirawat.</p>
                 <div class="profil">
-                    <img src="aset/img/profil1.jpg" alt="profil">
-                    <span>Nama</span>
+                    <img src="aset/img/user5.png" alt="profil">
+                    <span>Setya Ida</span>
                 </div>
             </div>
             <div class="item green">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus voluptates voluptate totam eos, obcaecati nobis earum officia recusandae optio porro atque nam corporis iste reprehenderit rerum neque autem? Suscipit, sequi.</p>
+                <p>Perhatikan kesehatan dan keselamatan kerja dengan menggunakan alat pelindung dan teknik kerja yang aman. Usahakan untuk menjaga keseimbangan antara pekerja dan kehidupan pribadi agar tetap sehat dan produktif.</p>
                 <div class="profil">
-                    <img src="aset/img/profil1.jpg" alt="profil">
-                    <span>Nama</span>
+                    <img src="aset/img/user4.png" alt="profil">
+                    <span>Kurnia Ningsih</span>
                 </div>
             </div>
             <div class="item">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus voluptates voluptate totam eos, obcaecati nobis earum officia recusandae optio porro atque nam corporis iste reprehenderit rerum neque autem? Suscipit, sequi.</p>
+                <p>Ikuti pelatihan dan workshop tentang teknik pertanian terbaru, manajemen bisnis pertanian, dan pemasaran produk. Bergabunglah dengan kelompok petani dan asosiasi untuk berbagai pengalaman dan informasi.</p>
                 <div class="profil">
-                    <img src="aset/img/profil1.jpg" alt="profil">
-                    <span>Nama</span>
+                    <img src="aset/img/user3.png" alt="profil">
+                    <span>Budi utomo</span>
                 </div>
             </div>
             <div class="item green">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus voluptates voluptate totam eos, obcaecati nobis earum officia recusandae optio porro atque nam corporis iste reprehenderit rerum neque autem? Suscipit, sequi.</p>
+                <p>Lakukan pemantauan rutin terhadap tanaman untuk mendeteksi hama dan penyakit  sejak dini. Gunakan metode pengendalian hama yang ramah lingkungan, seperti predator alami dan pestisida organik.</p>
                 <div class="profil">
-                    <img src="aset/img/profil1.jpg" alt="profil">
-                    <span>Nama</span>
+                    <img src="aset/img/user1.png" alt="profil">
+                    <span>Muhammad Sumbul</span>
                 </div>
             </div>
         </div>
     </div>
     
+    <div class="team-section">
+        <h2>All Team</h2>
+        <div class="team-container">
+            <div class="team-member">
+                <img src="aset/img/profil1.jpg" alt="Joko Purnomo">
+                <div class="team-info">
+                    <h3>Joko Purnomo</h3>
+                    <p>jokopurnomo22012006@gmail.com</p>
+                </div>
+            </div>
+            <div class="team-member">
+                <img src="aset/img/profil1.jpg" alt="Anggita Salsa Sapta A.">
+                <div class="team-info">
+                    <h3>Anggita Salsa Sapta A.</h3>
+                    <p>anggitaanggita985@gmail.com</p>
+                </div>
+            </div>
+            <div class="team-member">
+                <img src="aset/img/profil1.jpg" alt="Nafis Okta Ramadhan">
+                <div class="team-info">
+                    <h3>Nafis Okta Ramadhan</h3>
+                    <p>octanafis22@gmail.com</p>
+                </div>
+            </div>
+            <div class="team-member">
+                <img src="aset/img/profil1.jpg" alt="Rasyid Dzikry Arwamdy">
+                <div class="team-info">
+                    <h3>Rasyid Dzikry Arwamdy</h3>
+                    <p>rasyid.arwandi123@gmail.com</p>
+                </div>
+            </div>
+            <div class="team-member">
+                <img src="aset/img/profil1.jpg" alt="Erlinda Nur Latifah.">
+                <div class="team-info">
+                    <h3>Erlinda Nur Latifah.</h3>
+                    <p>nurlatifaherlinda@gmail.com</p>
+                </div>
+            </div>
+            <div class="team-member">
+                <img src="aset/img/profil1.jpg" alt="Lucky Achmad">
+                <div class="team-info">
+                    <h3>Lucky Achmad</h3>
+                    <p>luckyachmad535@gmail.com</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <footer>
+        <div class="footer-container">
+            <div class="footer-item">
+                <h3>MyDev-team</h3>
+                <p>Dari ladang ke Meja makan, semuanya berawal dari bumi.</p>
+            </div>
+            <div class="footer-item">
+                <h3>Tim Developer</h3>
+                <img src="aset/img/logo.webp" alt="Tani Berkah Logo">
+                <p>petaniberkah.dev</p>
+            </div>
+            <div class="footer-item">
+                <h3>Sosial Media</h3>
+                <p>Instagram</p>
+                <p>Facebook</p>
+                <p>Twitter</p>
+                <p>Youtube</p>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>© Copyright petaniberkah 2024</p>
+        </div>
+    </footer>
 </body>
 </html>
