Perbaikan scroll card horizontal dan scroll vertikal

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <div class="card-content">
                     <h3>Pertanian Memasuki Langkah Nyata Menuju Lumbung Pangan Dunia</h3>
                     <p>22 Desember 2023</p>
-                    <button>Selengkapnya</button>
+                    <a href="#content1"><button>Selengkapnya</button></a>
                 </div>
             </div>
             <div class="card">
@@ -67,7 +67,7 @@
                 <div class="card-content">
                     <h3>Upaya Hadapi Serangan Hama Wereng Dilahan Pertanian Terik</h3>
                     <p>12 Juni 2024</p>
-                    <button>Selengkapnya</button>
+                    <a href="#content2"><button>Selengkapnya</button></a>
                 </div>
             </div>
             <div class="card">
@@ -75,14 +75,14 @@
                 <div class="card-content">
                     <h3>Anggaran Ketahanan Pangan 2025: Harus Tingkatkan Produktivitas Pertanian</h3>
                     <p>29 Agustus 2024</p>
-                    <button>Selengkapnya</button>
+                    <a href="#content3"><button>Selengkapnya</button></a>
                 </div>
             </div>
         </div>
     </div>
 
     <div class="container3">
-        <div class="content-container">
+        <div id="content1" class="content-container">
             <div class="img"></div>
             <p>
                 Menteri Pertanian Andi Amran Sulaiman, pada kunjungan di Merauke, Papua Selatan, menegaskan tekad pemerintah untuk menjadikan Merauke sebagai lumbung pangan global. Dia menyatakan optimisme bahwa Merauke akan menjadi sumber utama beras nasional dalam dua tahun ke depan. Evaluasi dilakukan terhadap progres optimalisasi lahan rawa seluas 40 ribu hektar, dengan lebih dari separuh sudah selesai dibangun. Pembangunan jalan sepanjang 135,5 km juga tengah berlangsung untuk mendukung program cetak sawah 1 juta hektar. Menteri Amran memantau proyek ini secara langsung dan berkomitmen untuk terus mengawasinya. Semangat membangun Merauke sebagai lumbung pangan dunia menjadi fokus dalam upaya modernisasi pertanian di daerah tersebut.
@@ -91,7 +91,7 @@
     </div>
 
     <div class="container4">
-        <div class="content-container">
+        <div id="content2" class="content-container">
             <p>
                 Serangan hama wereng terhadap tanaman padi di Tasikmalaya telah menimbulkan kekhawatiran, terutama bagi para petani. Koordinator penyuluh pertanian BPP Kecamatan Cibeureum, Asep Ridwan, menyampaikan bahwa serangan hama wereng jenis batang coklat (WBC) kini sedang merebak dan mengejutkan petani. Hal ini diduga disebabkan oleh perubahan iklim, penggunaan benih kurang berkualitas, dan gangguan ekosistem yang mengurangi populasi predator wereng. Untuk mengatasi masalah ini, saat ini dilakukan penyemprotan insektisida baik oleh pemerintah maupun petani sendiri. Para penyuluh pertanian juga memberikan bantuan insektisida kepada petani untuk membantu mengatasi serangan hama wereng ini. Meskipun jumlah lahan yang terdampak mencapai 80 hektar, petugas terus melakukan upaya pengendalian dan memberikan penyuluhan untuk mencegah serangan hama tersebut terjadi di musim panen selanjutnya.
             </p>
@@ -100,7 +100,7 @@
     </div>
 
     <div class="container3 container5">
-        <div class="content-container">
+        <div id="content3" class="content-container">
             <div class="img"></div>
             <p>
                 Pengamat pertanian dan Kepala Dinas Pangan Sumatera Barat, Syaiful Bahri, menyoroti pentingnya memaksimalkan anggaran ketahanan pangan Rp 124,4 triliun dalam RAPBN 2025 untuk meningkatkan produktivitas pertanian. Dikatakan bahwa prioritas utama harus diberikan pada ketahanan pangan, baik melalui impor maupun produksi dalam negeri. Syaiful menekankan perlunya pemerintah fokus pada peningkatan produktivitas pertanian, terutama dalam produksi padi, untuk menghindari defisit beras. Keseriusan pemerintah dalam mencapai ketahanan pangan dinilai dari penanganan berbagai permasalahan pertanian, seperti pupuk subsidi, kualitas bibit, dan infrastruktur pertanian.
