--- a/contact.html
+++ b/contact.html
@@ -37,22 +37,30 @@
     <div class="contact">
             <div class="contact_item animate__animated animate__fadeInUp animate__delay-1s">
                 <div class="items">
-                    <div class="detail_item">
-                        <img class="icon icon1 animate__animated animate__slideInLeft animate__delay-1s" src="aset/img/vektor 1.png" alt="location">
+                    <div class="detail_item location">
+                        <div class="icon icon1 animate__animated animate__slideInLeft animate__delay-1s">
+                            <img class=""  src="aset/img/location.png" alt="location">
+                        </div>
                         <p class="text1 animate__animated animate__fadeInUpBig animate__delay-1s">
-                            121 Rock Sreet, 21 Avenue,New York, NY 92103-9000 121 Rock Sreet, 21 Avenue,New York, NY 92103-9000
+                            121 Rock Sreet, 21 Avenue,New York, NY 92103-9000
                         </p>
                     </div>
-                    <div class="detail_item ">
-                        <img class="icon icon2 animate__animated animate__slideInLeft animate__delay-1s" src="aset/img/vektor 1.png" alt="email">
+                    <div class="detail_item mail ">
+                        <div class="icon icon2 animate__animated animate__slideInLeft animate__delay-1s">
+                            <img src="aset/img/mail.png" alt="email">
+                        </div>
                         <p class="text2 animate__animated animate__fadeInUpBig animate__delay-1s">
-                            121 Rock Sreet, 21 Avenue,New York, NY 92103-9000
+                            petaniberkah@gmail.com <br>
+                            infopetani@gmail.com
                         </p>
                     </div>
-                    <div class="detail_item ">
-                        <img class="icon icon3 animate__animated animate__slideInLeft animate__delay-1s" src="aset/img/vektor 1.png" alt="phone">
+                    <div class="detail_item phone ">
+                        <div class="icon icon3 animate__animated animate__slideInLeft animate__delay-1s">
+                            <img class="" src="aset/img/phone.png" alt="phone">
+                        </div>
                         <p class="text3 animate__animated animate__fadeInUpBig animate__delay-1s">
-                            121 Rock Sreet, 21 Avenue,New York, NY 92103-9000
+                            1 (234) 567-891 <br>
+                            1 (234) 987-654
                         </p>
                     </div>
                 </div>
