--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </nav>
 
     <div id="home" class="container1 animate__animated animate__fadeIn animate__faster">
-        <video src="aset/video/video.webm" autoplay muted loop>
+        <video src="aset/video/bg.webm" autoplay muted loop>
     </div>
 
     <div class="container2">
@@ -189,14 +189,14 @@
                 </div>
             </div>
             <div class="team-member" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="750">
-                <img src="aset/img/profil1.jpg" alt="Rasyid Dzikry Arwamdy">
+                <img src="aset/img/rasyid.jpg" alt="Rasyid Dzikry Arwamdy">
                 <div class="team-info">
                     <h3>Rasyid Dzikry Arwamdy</h3>
                     <p>rasyid.arwandi123@gmail.com</p>
                 </div>
             </div>
             <div class="team-member" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="1000">
-                <img src="aset/img/profil1.jpg" alt="Erlinda Nur Latifah.">
+                <img src="aset/img/erlinda.jpg" alt="Erlinda Nur Latifah.">
                 <div class="team-info">
                     <h3>Erlinda Nur Latifah.</h3>
                     <p>nurlatifaherlinda@gmail.com</p>
