merubah foto profil

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         <h2 id="unit_kerja">All Team</h2>
         <div class="team-container">
             <div class="team-member" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="">
-                <img src="aset/img/joko.png" alt="Joko Purnomo">
+                <img src="aset/img/joko.JPG" alt="Joko Purnomo">
                 <div class="team-info">
                     <h3>Joko Purnomo</h3>
                     <p>jokopurnomo22012006@gmail.com</p>
