--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     </head>
-    
+
     <body>
     
       <nav class="navbar sticky-top navbar-expand-lg animate__animated animate__fadeInDown animate__delay-1s">
@@ -184,48 +184,48 @@
     <div  class="team-section">
         <h2 id="unit_kerja">All Team</h2>
         <div class="team-container">
-            <div class="team-member" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="">
+            <a href="profil-JokoPurnomo.html" class="team-member" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="">
                 <img src="aset/img/joko.JPG" alt="Joko Purnomo">
                 <div class="team-info">
                     <h3>Joko Purnomo</h3>
                     <p>jokopurnomo22012006@gmail.com</p>
                 </div>
-            </div>
-            <div class="team-member" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="250">
+            </a>
+            <a href="profil-AnggitaSalsaSaptaA.html" class="team-member" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="250">
                 <img src="aset/img/anggita.jpg" alt="Anggita Salsa Sapta A.">
                 <div class="team-info">
                     <h3>Anggita Salsa Sapta A.</h3>
                     <p>anggitaanggita985@gmail.com</p>
                 </div>
-            </div>
-            <div class="team-member" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">
+            </a>
+            <a href="profil-NafisOktaRamadhan.html" class="team-member" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">
                 <img src="aset/img/nafis.jpg" alt="Nafis Okta Ramadhan">
                 <div class="team-info">
                     <h3>Nafis Okta Ramadhan</h3>
                     <p>octanafis22@gmail.com</p>
                 </div>
-            </div>
-            <div class="team-member" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="750">
+            </a>
+            <a href="profil-RasyidDzikryArwamdy.html" class="team-member" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="750">
                 <img src="aset/img/rasyid.jpg" alt="Rasyid Dzikry Arwamdy">
                 <div class="team-info">
                     <h3>Rasyid Dzikry Arwamdy</h3>
                     <p>rasyid.arwandi123@gmail.com</p>
                 </div>
-            </div>
-            <div class="team-member" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="1000">
+            </a>
+            <a href="profil-ErlindaNurLatifah.html" class="team-member" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="1000">
                 <img src="aset/img/erlinda.jpg" alt="Erlinda Nur Latifah.">
                 <div class="team-info">
-                    <h3>Erlinda Nur Latifah.</h3>
+                    <h3>Erlinda Nur Lathifah.</h3>
                     <p>nurlatifaherlinda@gmail.com</p>
                 </div>
-            </div>
-            <div class="team-member" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="1250">
+            </a>
+            <a href="profil-LuckyAchmad.html" class="team-member" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="1250">
                 <img src="aset/img/lucky.jpg" alt="Lucky Achmad">
                 <div class="team-info">
                     <h3>Lucky Achmad</h3>
                     <p>luckyachmad535@gmail.com</p>
                 </div>
-            </div>
+            </a>
         </div>
     </div>
 
